--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "async-each": "~0.1.6",
     "browser-resolve": "~1.7.2",
     "commonjs-require-definition": "^0.2.0",
-    "detective": "~4.0.0"
+    "detective": "^4.0.0"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
