--- a/package.json
+++ b/package.json
@@ -11,25 +11,11 @@
   "author": "Artem Yavorsky (http://yavorsky.org)",
   "repository": "https://github.com/yavorsky/deppack.git",
   "bugs": "http://github.com/yavorsky/deppack/issues",
-  "licenses": [
-    {
-      "type": "MIT"
-    }
-  ],
-  "main": "./lib/deppack.js",
-  "scripts": {
-    "prepublish": "coffee -bo lib/ src/"
-  },
+  "licenses": [{"type": "MIT"}],
   "dependencies": {
     "async-each": "~0.1.6",
     "browser-resolve": "~1.7.2",
-    "commonjs-require-definition": "^0.2.0",
+    "commonjs-require-definition": "~0.2.0",
     "detective": "^4.0.0"
-  },
-  "devDependencies": {
-    "mocha": "~1.12.0",
-    "chai": "~1.7.0",
-    "rewire": "~1.1.3",
-    "express": "~3.3.0"
   }
 }
